// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image snapshot: with an \`imageUrl\` and \`altName\` attribute 1`] = `
<img
  alt="some name"
  className="image"
  src="https://example.com"
/>
`;

exports[`Image snapshot: with fallback image 1`] = `
<img
  alt=""
  className="image"
  src={Object {}}
/>
`;

exports[`Image snapshot: without \`altName\` attribute 1`] = `
<img
  alt=""
  className="image"
  src="https://example.com"
/>
`;
